--- a/src/com/intelligents/resources/Rules
+++ b/src/com/intelligents/resources/Rules
@@ -1,43 +1,45 @@
-                        ****RULES****
+********************************************RULES*********************************************
 
-                Traverse through the rooms to look for evidence of ghostly visitors.
-                If anything looks suspicious, make sure to take note
-                in your journal.
+Traverse through the rooms to look for evidence of ghostly visitors.
+If anything looks suspicious, make sure to take note
+in your journal.
 
-                To be victorious you must be in lobby and request to exit; once out, you must use the evidence that you have collected
-                to correctly answer which ghost is guilty of the haunting.
+To be victorious you must be in lobby and request to exit; once out, you must use the evidence that you have collected
+to correctly answer which ghost is guilty of the haunting.
 
-                You will only have 2 attempts before the game ends! After each wrong guess, the world resets and you are
-                thrown back in!
+You will only have 2 attempts before the game ends! After each wrong guess, the world resets and you are
+thrown back in!
 
-                Happy hunting!!
+Happy hunting!!
 
-                       ****Commands****
+******************************************Commands******************************************
 
-                - help = displays this screen
+- help/? = displays this screen
 
-                - open = displays the game map and current location
+- open = displays the game map and current location
 
-                - read = to view what's in your character's journal
+- read = to view what's in your character's journal
 
-                - look/show = displays any evidence located in your current room
+- write = to write in your character's journal
 
-                - move/go + direction e.g. "move north" or "go west"
+- look/view/show = displays any evidence located in your current room
 
-                - save = save game progress
+- move/go + direction e.g. "move north" or "go west"
 
-                - play = start music
+- save = save game progress
 
-                - pause = pause music
+- play = start music
 
-                - stop = turn off all game sounds
+- pause = pause music
 
-                - volume up = increases volume
+- stop = turn off all game sounds
 
-                - volume down = decreases volume
+- volume up = increases volume
 
-                - exit = if in lobby it allows you to a temporarily leave the home to guess the ghost
+- volume down = decreases volume
 
-                - q/quit will stop the game.
+- exit = if in lobby it allows you to a temporarily leave the home to guess the ghost
+
+- q/quit will stop the game.
 
 
