AB#881 added rules/commands for eating and drinking.

--- a/src/com/intelligents/resources/Rules
+++ b/src/com/intelligents/resources/Rules
@@ -30,6 +30,8 @@ Happy hunting!!
 
 - get/grab/take + item e.g. "grab basket" or "get basket"
 
+- eat/drink + consumable item e.g. "drink moss-water" or "eat peanut-butter"
+
 - save = save game progress
 
 - play = start music
